@@ -2,3 +2,12 @@
 The project is written in java.
 Breif background about the project:
 In this project, we will deal with an XML file to apply different operations on it such as minify, prettify, JSON conversion, compression and etc.., XML (Extensible Markup Language) is one of the most famous formats for storing and sharing information among different devices. Some text editors such as Sublime Text are able to parse such files and do some basic operations. In our system, the XML file will represent users in a social network. Each user has an id (unique), name, list of posts, and list of followers. Each post has text and a list of topics. The operations will be done using different data structures like stack, array, tree, and graphs. For example, to validate the XML file and check it is correct, we could use a stack. Moreover, compressing and decompressing the file will require a tree data structure. Also, using graphs will help us analyze the users’ data and specify the connections and relations between different users. Several types of data structures can be included in the operations to be done. The second part of the project is to build GUI (Graphical User Interface) to facilitate the user’s ability to directly deal with the XML file functions. Using GUI, the user can specify the location of an input XML file to apply different methods on it.
+====================================================================================================================
+
+
+
+IMPORTANTN REMARK! To open the jar file, you need to install javafx library and by using cmd window. First, write "cd Desktop" where the jar file is allocated. Then, write this command on the cmd window:
+java --module-path "C:\Users\Salma\Downloads\openjfx-18.0.1_windows-x64_bin-sdk\javafx-sdk-18.0.1\lib" --add-modules javafx.controls,javafx.fxml -jar JavaApplication19.jar
+take in consideration that you should replace the path with the path of javafx in your device.
+NOTE: you have to keep cmd window open while executing the program.
+![Screenshot_20230203_044636](https://user-images.githubusercontent.com/105376336/216491887-29976cf9-e714-4ce4-8f67-52de33f79597.png)
